# fuel-logger-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  justfile
.devcontainer/: devcontainer.json
.git-hooks/: pre-commit
.github/workflows/: main.yml
dev/: docker-compose.yml  example-config.yml
migrations/: 20240804040621_initial-structure.down.sql  20240804040621_initial-structure.up.sql
src/: configuration.rs  controllers.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  utils.rs
src/controllers/: log_record.rs  mod.rs  user.rs  vehicle.rs
src/extractors/: custom_json.rs  mod.rs
src/models/: log_record.rs  mod.rs  person.rs  vehicle.rs
src/models/api/: log_record.rs  mod.rs  user.rs  vehicle.rs
src/models/db/: log_record.rs  mod.rs  user.rs  vehicle.rs
src/routes/: log_records.rs  mod.rs  users.rs  vehicles.rs
src/types/: log_record.rs  log_type.rs  mod.rs  primitives.rs  user.rs  vehicle.rs
src/types/configuration/: mod.rs  server_host.rs  server_port.rs
tests/: log_records.rs  users.rs  vehicles.rs
tests/common/: db.rs  mod.rs  server.rs
