[package]
name = "fuel-logger-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
fake = { version = "2.9.2", features = [
    "derive",
    "chrono",
    "chrono-tz",
    "uuid",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
thiserror = "2.0.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
approx = "0.5.1"
itertools = "0.13.0"
test-case = "3.3.1"
tower = { version = "0.5.1", features = ["util"] }
